# kbswitch

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  kbswitch.sln
.github/workflows/: build-and-release.yml
cmake/: WIL.cmake  argparse.cmake  spdlog.cmake
include/: command_executor.h  encoding.h  keyboard_layout_manager.h  keyboard_layout_registry.h  logging.h
include/kbswitch/: version.h.in
kbswitch/: cli.cpp  cli.h  cliutil.cpp  cliutil.h  dbg.cpp  dbg.h  kbdef.h  kbswitch.cpp  kbswitch.vcxproj  kbswitch.vcxproj.filters  kbutil.cpp  kbutil.h  winreg.h  winreg.hpp
src/: command_executor.cc  encoding.cc  keyboard_layout_manager.cc  keyboard_layout_registry.cc  main.cc  main.cxx
